# digital_sky_innovations_hack

./: .gitignore  package-lock.json  package.json  readme.md
ReportSender/: Taskfile.yaml  go.mod  go.sum  main.go
ReportSender/files/: 1.json
ReportSender/tests/: process_perfomance_test.go  process_pids_test.go  truncate_pids_test.go
ReportSender/truncate/: truncate_pids.go
ReportSender/upload/: process_files.go  upload_pids.go
backend_GO/: Taskfile.yaml  go.mod
backend_GO/cmd/pidHistory/: main.go
backend_GO/config/: config.yaml
backend_GO/internal/app/: app.go
backend_GO/internal/config/: config.go
backend_python/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  docker-compose.yml  pid.xml  pyproject.toml  xml_test.json
backend_python/app/: dependencies.py  gen_openapi.py  main.py
backend_python/app/core/: router.py  settings.py
backend_python/app/db/: __init__.py  database.py
backend_python/app/lib/: pid.py  security.py
backend_python/app/routers/: __init__.py  auth.py  pid.py
backend_python/app/schemas/: auth.py  pid.py
backend_python/app/services/: __init__.py  auth.py  pid.py
backend_python/pids/: pid.xml  pid_1744910655.json
frontend/: .prettierrc  package-lock.json  package.json
frontend/src/: api.ts  style.css
frontend/src/pages/: HistoryPage.vue  (+1 more)
proxy/: go.mod  main.go
src/: App.vue  api.ts  style.css
src/components/: MainButton.vue
src/pages/: AuthPage.vue  HistoryPage.vue  MainPage.vue
src/router/: index.ts
src/store/: pidsStore.ts  storiesStore.ts
src/widgets/: MainHeader.vue  PIDCard.vue
(+7 files in other folders)
